# decaf-rs

./: .gitignore  Cargo.toml  readme.md
codegen/: Cargo.toml  lib.s
codegen/src/: brute_alloc.rs  graph_alloc.rs  lib.rs  mips.rs  mips_gen.rs
common/: Cargo.toml
common/src/: errors.rs  ignore_result.rs  indent_printer.rs  lib.rs  loc.rs  op.rs  ref.rs
driver/: Cargo.toml
driver/src/: cli.rs  lib.rs  test.rs  test_util.rs
print/: Cargo.toml
print/src/: ast.rs  lib.rs  mips.rs  scope.rs  tac.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  parser.rs  parser_ll.rs  symbol.rs  ty.rs
tac/: Cargo.toml
tac/src/: iter.rs  lib.rs
tacgen/: Cargo.toml
tacgen/src/: info.rs  lib.rs
tacopt/: Cargo.toml
tacopt/src/: aliveness.rs  bb.rs  common_expr.rs  const_prop.rs  copy_prop.rs  flow.rs  lib.rs
typeck/: Cargo.toml
typeck/src/: lib.rs  scope_stack.rs  symbol_pass.rs  type_pass.rs
